[package]
name = "copy_arena"
version = "0.1.1"
authors = ["Peter Reid <peter.d.reid@gmail.com>"]
license = "MIT"
readme = "README.md"
description = """
Arena allocator for types implementing Copy
"""
repository = "https://github.com/PeterReid/copy_arena"
documentation = "https://PeterReid.github.io/copy_arena"
keywords = ["arena"]
